@@ -122,7 +122,7 @@ public abstract class AbstractSimpleContainer<T>
     AbstractSimpleContainer<T>	result;
     
     try {
-      result = (AbstractSimpleContainer<T>) getClass().newInstance();
+      result = (AbstractSimpleContainer<T>) getClass().getDeclaredConstructor().newInstance();
       result.setReport(getReport().getClone());
       result.m_Notes = getNotes().getClone();
     }
