@@ -258,7 +258,7 @@ public abstract class AbstractActorProcessorTestCase
     producer = null;
     if ((format != null) && (format.length() >= 0)) {
       try {
-	producer = (OptionProducer) ClassManager.getSingleton().forName(format).newInstance();
+	producer = (OptionProducer) ClassManager.getSingleton().forName(format).getDeclaredConstructor().newInstance();
       }
       catch (Exception e) {
 	System.err.println("Failed to instantiate option producer '" + format + "': " + e);
