@@ -129,7 +129,7 @@ public class AdamsExperimentFileChooser
 
       // get data from converter
       try {
-	converter = cls.newInstance();
+	converter = cls.getDeclaredConstructor().newInstance();
 	if (reader) {
 	  desc = ((AbstractAdamsExperimentReader) converter).getFormatDescription();
 	  ext  = ((AbstractAdamsExperimentReader) converter).getFormatExtensions();
@@ -268,7 +268,7 @@ public class AdamsExperimentFileChooser
     for (ExtensionFileFilterWithClass filter: m_ReaderFileFilters) {
       if (filter.accept(file)) {
 	try {
-	  result = (AbstractAdamsExperimentReader) ClassManager.getSingleton().forName(filter.getClassname()).newInstance();
+	  result = (AbstractAdamsExperimentReader) ClassManager.getSingleton().forName(filter.getClassname()).getDeclaredConstructor().newInstance();
 	}
 	catch (Exception e) {
 	  handleException("Failed to instantiate reader: " + filter.getClassname(), e);
@@ -300,7 +300,7 @@ public class AdamsExperimentFileChooser
     for (ExtensionFileFilterWithClass filter: m_WriterFileFilters) {
       if (filter.accept(file)) {
 	try {
-	  result = (AbstractAdamsExperimentWriter) ClassManager.getSingleton().forName(filter.getClassname()).newInstance();
+	  result = (AbstractAdamsExperimentWriter) ClassManager.getSingleton().forName(filter.getClassname()).getDeclaredConstructor().newInstance();
 	}
 	catch (Exception e) {
 	  handleException("Failed to instantiate writer: " + filter.getClassname(), e);
